--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -109,16 +109,17 @@
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Widget.App.TextInputLayout.OutlinedBox.Rounded"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:layout_marginEnd="8dp"
                     android:hint="@string/category_label">
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/edit_text_open_category_dialog"
+                        android:id="@+id/edit_text_category"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:focusable="false"
-                        android:clickable="true"/>
+                        android:clickable="true"
+                        android:inputType="none"/>
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
